; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/intel_th/extr_msu.c_intel_th_msc_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/intel_th/extr_msu.c_intel_th_msc_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.msc_iter* }
%struct.msc_iter = type { %struct.msc* }
%struct.msc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @intel_th_msc_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intel_th_msc_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.msc_iter*, align 8
  %6 = alloca %struct.msc*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.msc_iter*, %struct.msc_iter** %8, align 8
  store %struct.msc_iter* %9, %struct.msc_iter** %5, align 8
  %10 = load %struct.msc_iter*, %struct.msc_iter** %5, align 8
  %11 = getelementptr inbounds %struct.msc_iter, %struct.msc_iter* %10, i32 0, i32 0
  %12 = load %struct.msc*, %struct.msc** %11, align 8
  store %struct.msc* %12, %struct.msc** %6, align 8
  %13 = load %struct.msc_iter*, %struct.msc_iter** %5, align 8
  %14 = load %struct.msc*, %struct.msc** %6, align 8
  %15 = call i32 @msc_iter_remove(%struct.msc_iter* %13, %struct.msc* %14)
  ret i32 0
}

declare dso_local i32 @msc_iter_remove(%struct.msc_iter*, %struct.msc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
